--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[]
+[{"id":1,"description":"comprar pão","status":"TODO","createdAt":"2025-04-24T15:54:07.034827119","updatedAt":"2025-04-24T15:54:07.034827119"}]
